--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "init_cfg":{
-       "isLandscape": false,
+       "isLandscape": true,
        "isWindowTop": false,
        "name": "tc",
        "width": 640,
